k8s/prometheus/ingress.yaml
# Ingress dla Prometheus - prometheus.192.168.1.24.nip.io
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: local-ca
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.192.168.1.24.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
  tls:
  - hosts:
    - prometheus.192.168.1.24.nip.io
    secretName: prometheus-tls
